# SMCO-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: LLM-handoff-benchmark-guide.md  benchmark-command-cheatsheet.md  code-review-comparison-issues-2026-05-12.md  direction-bug-2026-06-15.md  paper-rerun-comparison-2026-05-14.md  plan-260615.md  rerun-only-visualization-2026-05-14.md  smcohb.md  targeted-br-gensa-2026-05-14.md  usage.md
result/: analysis-evo12-2026-07-20.md  benchmark-results-complex.json  benchmark-results-paper-comparison.csv  benchmark-results-paper-comparison.json  paper_tables_integrated_2026-05-27.md  summary-260615.md
scripts/: analyze_evo_comparison.py  analyze_evo_results.py  analyze_extended.py  analyze_highdim.py  analyze_highdim_1000d.py  compare_rerun_with_paper.py  package_highdim_results.py  package_smco_evo_results.py  plot_evo12_analysis.py  run_evo_dimsplit_comparison.py  run_evo_startsweep_comparison.py  run_evo_strategy_sweep_missing.py  run_evo_strategy_sweep_serial.py  run_experiment.py  run_highdim_comparison.py  run_highdim_full_comparison.py  run_highdim_v2.py  run_paper_comparison_benchmark.py  run_paper_tables_with_evo.py  run_seed_sensitivity.py  run_smco_evo_comparison.py  run_startsweep_base_comparison.py  run_synced_r_benchmarks_with_evo.py  run_targeted_br_gensa.py  summarize_targeted_br_gensa.py  summary_tables.py  visualize_benchmark.py  visualize_rerun_only.py
tests/: test_benchmark.py  test_comparison.py  test_multifidelity.py  test_optimizer.py  test_test_functions.py  test_validation.py
(+678 files in other folders)
