[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smco"
version = "0.1.0"
description = "Python migration of Strategic Monte Carlo Optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
